# PostmortemCLI-email-security-analyzer

./: .Dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  launcher.py  main.py  postmortemcli  postmortemcli.ps1  pyproject.toml  pytest.ini  release.py  requirements.txt  smoke_test.py
.github/workflows/: Ci-CD.yml  Ci.yml
private-registry-setup-example/: env.example  setup.sh
src/: .env.example  __init__.py  analyzer.py  logger.py  parser.py  reporter.py  sender.py  smtp_reciever.py
tests/: conftest.py  test_live_apis.py  test_parser.py  test_reciever.py
tests/pytest/: test_analyzer.py  test_parser.py
tests/samples/: phishing_email.eml
