[build-system]
requires      = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name    = "postmortemcli"
version = "0.1.0"
description = "Email security analysis tool"
requires-python = ">=3.10"
dependencies = [
    "aiosmtpd",
    "dnspython",
    "extract-msg",
]

[project.scripts]
postmortemcli = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
# "dev" = only installed in development, not in production
# pip install -e ".[dev]"  ← installs pytest too
# pip install -e .         ← skips pytest (production/container)

[tool.pytest.ini_options]
pythonpath = ["."]
# "." = project root
# tells pytest to look for modules starting from here
# so "from src.parser import..." resolves correctly