[build-system]
requires      = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name            = "postmortemcli"
version         = "2.0.1"
description     = "Email security analysis tool – containerized CLI for structured threat detection"
requires-python = ">=3.10"
dependencies    = []

[tool.setuptools]
py-modules = ["launcher", "main"]

[project.scripts]
postmortemcli = "launcher:main"

[project.optional-dependencies]
dev = ["pytest", "aiosmtpd", "dnspython", "extract-msg"]