[build-system]
requires      = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name            = "postmortemcli"
version         = "0.2.21-beta"
description     = "Email security analysis tool – containerized CLI for structured threat detection"
requires-python = ">=3.10"
dependencies    = ["aiosmtpd", "dnspython", "extract-msg", "requests", "dkimpy"]

[tool.setuptools]
py-modules = ["launcher", "main"]

[project.scripts]
postmortemcli = "launcher:main"

[project.optional-dependencies]
dev = ["pytest", "aiosmtpd", "dnspython", "extract-msg", "requests", "dkimpy"]